Added forceupgrade to script